// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
      - unlabeled
jobs:
  approve:
    if: contains(github.event.pull_request.labels.*.name, 'custom-auto-approve')
    runs-on: ubuntu-latest
    steps:
      - uses: hmarr/auto-approve-action@v2.0.0
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
"
`;

exports[`default options 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run \\"npx projen\\".

name: auto-approve
on:
  pull_request:
    types:
      - labeled
      - opened
      - unlabeled
jobs:
  approve:
    if: contains(github.event.pull_request.labels.*.name, 'pr/auto-approve')
    runs-on: ubuntu-latest
    steps:
      - uses: hmarr/auto-approve-action@v2.0.0
        with:
          github-token: \${{ secrets.GITHUB_TOKEN }}
"
`;
